# fastapi_mcp_sse

./: Dockerfile  Dockerfile.backup  README.md  docker-compose.yml  pyproject.toml  requirements.txt  smithery.yaml
nginx/: default  default.conf
src/: app.py  logispot_mcp.py  routes.py  server.py
