[project]
name = "fastapi-mcp-sse"
version = "0.1.0"
description = "A working example to create a FastAPI server with SSE-based MCP support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.11",
  "httpx>=0.28.1",
  "fastapi-mcp>=0.3.4",
  "fastmcp>=2.9.1",
  "uvicorn[standard]>=0.29.0",
  "openai>=1.29.0",         # ✅ OpenAI API 연동용
  "mcp[cli]>=1.3.0",        # ✅ CLI 실행 지원
  "anyio>=3.7.0",           # ✅ async 함수 실행을 위한 MCP 내부용
]

[project.scripts]
start = "server:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
